--- a/index.html
+++ b/index.html
@@ -54,8 +54,42 @@
         <section class="facts">
             <h3 class="section-tittle">Some Facts</h3>
             <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <!-- .card*4>img+h2.card-states+p.card-tittle -->
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2 class="card-states">54</h2>
+                    <p class="card-tittle text-light-gray">Awards Winnings</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2 class="card-states">1458</h2>
+                    <p class="card-tittle text-light-gray">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2 class="card-states">590</h2>
+                    <p class="card-tittle text-light-gray">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h2 class="card-states">22578</h2>
+                    <p class="card-tittle text-light-gray">Email Send</p>
+                </div>
+            </div>
         </section>
-
+        <!-- sponsors section -->
+        <section class="sponsors">
+            <h3 class="section-tittle">Our Sponspors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
